Fixes gap

--- a/public/styles/colour-picker.css
+++ b/public/styles/colour-picker.css
@@ -43,7 +43,8 @@
 	background-color: #fff;
 	border-radius: 10px;
 	border: 1px solid #333;
-  margin: 10px auto;
+  margin: 0;
+  margin-bottom: 0.5rem;
   padding: 15px;
 }
 
